[package]
name = "rust2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5" 
tokio = { version = "1", features = ["full", "macros"] }
bincode ={ version = "*"}
serde_json ={ version = "*"}
serde = { version = "1.0", features = ["derive"] }
byteorder = { version = "*"}
tui = "0.19.0"
itertools = "0.13.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "sc"
path = "src/sc.rs"

[[bin]]
name = "menu"
path = "src/menu.rs"

